--- a/sections/section styles/quienes-somos.css
+++ b/sections/section styles/quienes-somos.css
@@ -1,3 +1,13 @@
+/*Section styles*/
+
+/*Section 1*/
+.ab-us-section-image {
+    padding: 0;
+    margin: 0;
+    max-width: 100%;
+    height: auto;
+}
+
 /*Footer styles*/
 footer {
     background-color: #3c4146;
