--- a/sections/section styles/proyecto.css
+++ b/sections/section styles/proyecto.css
@@ -8,6 +8,15 @@
     height: auto;
 }
 
+/*Section 2*/
+h5 {
+    text-align: center;
+}
+
+img {
+    align-items: center;
+}
+
 /*Footer styles*/
 footer {
     background-color: #3c4146;
