--- a/sections/section styles/actividades.css
+++ b/sections/section styles/actividades.css
@@ -7,6 +7,16 @@ body {
     width: 100%;
 }
 
+/*Header styles*/
+a {
+    text-decoration: none;
+    color: #727272;
+}
+
+.nav-item:hover {
+    color: black; /* Color del texto al pasar el ratón por encima */
+}
+
 /*Section styles*/
 
 /*Section 1*/
