--- a/sections/section styles/inscripciones.css
+++ b/sections/section styles/inscripciones.css
@@ -1,3 +1,13 @@
+/*Header styles*/
+a {
+    text-decoration: none;
+    color: #727272;
+}
+
+.nav-item:hover {
+    color: black; /* Color del texto al pasar el ratón por encima */
+}
+
 /*Section 1 - Body*/
 section {
     margin: 10px;
