--- a/sections/section styles/colaborar.css
+++ b/sections/section styles/colaborar.css
@@ -1,3 +1,13 @@
+/*Header styles*/
+a {
+    text-decoration: none;
+    color: #727272;
+}
+
+.nav-item:hover {
+    color: black; /* Color del texto al pasar el ratón por encima */
+}
+
 /*Footer styles*/
 footer {
     background-color: #3c4146;
