--- a/sections/section styles/proyecto.css
+++ b/sections/section styles/proyecto.css
@@ -1,3 +1,13 @@
+/*Header styles*/
+a {
+    text-decoration: none;
+    color: #727272;
+}
+
+.nav-item:hover {
+    color: black; /* Color del texto al pasar el ratón por encima */
+}
+
 /*Section styles*/
 
 /*Section 1*/
@@ -9,6 +19,25 @@
 }
 
 /*Section 2*/
+p {
+    text-align: justify;
+}
+
+.texts {
+    margin-top: 30px;
+}
+
+.phrase {
+    margin-top: 40px;
+    margin-bottom: 10px;
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+    padding: 20px;
+}
+
+.pillars {
+    margin-top: 10px;
+}
+
 h5 {
     text-align: center;
 }
