--- a/sections/section styles/quienes-somos.css
+++ b/sections/section styles/quienes-somos.css
@@ -18,6 +18,18 @@ a {
     height: auto;
 }
 
+/*Section2*/
+.card-header {
+    background-color: #0aa10a;
+    color: #ffffff;
+    text-align: center;
+    font-size: 30px;
+}
+
+h3 {
+    font-size: 50px;
+}
+
 /*Footer styles*/
 footer {
     background-color: #3c4146;
