Advance in index section

--- a/sections/section styles/quienes-somos.css
+++ b/sections/section styles/quienes-somos.css
@@ -20,7 +20,7 @@ a {
 
 /*Section2*/
 .card-header {
-    background-color: #0aa10a;
+    background-color: #4CAF50;
     color: #ffffff;
     text-align: center;
     font-size: 30px;
