--- a/sections/section styles/inscripciones.css
+++ b/sections/section styles/inscripciones.css
@@ -67,7 +67,7 @@ textarea {
 }
 
 button {
-    background-color: #008000;
+    background-color: #4CAF50;
     color: #ffffff; 
     border-radius: 5px;
     padding: 10px 20px; 
