Finished 100% Ab-Us section. I added text to the cover

--- a/sections/section styles/quienes-somos.css
+++ b/sections/section styles/quienes-somos.css
@@ -5,7 +5,8 @@ a {
 }
 
 .nav-item:hover {
-    color: black; /* Color del texto al pasar el ratón por encima */
+    color: black;
+    /* Color del texto al pasar el ratón por encima */
 }
 
 /*Section styles*/
@@ -16,6 +17,17 @@ a {
     margin: 0;
     max-width: 100%;
     height: auto;
+}
+
+.text {
+    position: absolute;
+    top: 35%;
+    left: 33%;
+    transform: translate(-50%, -50%);
+    color: white;
+    padding: 10px;
+    text-align: center;
+    font-size: 16px;
 }
 
 /*Section2*/
